--- a/index.html
+++ b/index.html
@@ -87,27 +87,40 @@
                 <h3>Process control and machine operator.</h3>
                 <div>January 2022 – December 2022 <br>Busch Hungaria KFT. Raab ,Hungary</div>
                 <ul>
-                    <li>Operating the sandshooting machine in order to produce foundry cores according to given instructions and demand on quality.</li>
+                    <li>Set up, adjust and operate mouldmaking and coremaking sandshooting machine to make sand moulds and cores</li>
+                    <li>Operate ovens to dry moulds</li>
+                    <li>Make and repair sand moulds using patterns, moulding boxes, sand and hand tools following bench, floor or pit moulding methods</li>
+                    <li>Make cores for use inside moulds to form holes or void spaces in castings using core boxes, sand, hammer and wire or other reinforcing material</li>
+                    <li>Coat cores with protective materials and bake cores in oven</li>
                 </ul>
                 <hr>
                 <h3>Carbon fiber manufacturing plant, line operator.</h3>
                 <div>January 2020 – January 2022 <br>Zoltek KFT. Nyergesujfalu, Hungary</div>
                 <ul>
-                    <li>Process monitoring according to demands on quality and safety.</li>
-                    <li>Troubleshooting.</li>
+                    <li>Set up, prepare and adjust carbon fiber production machinery to carry all the steps step in the overall carbon fiber production operation.</li>
+                    <li>Observe gauges, meters, computer printouts, video monitors and products to ensure correct operation of machinery and verify processing conditions</li>
+                    <li>Make adjustments to machinery as required</li>
+                    <li>Record production information and complete reports</li>
+                    <li>Assist with machinery maintenance and repair.</li>
                 </ul>
                 <hr>
                 <h3>Process control and machine operator.</h3>
                 <div>November 2018 – January 2020 <br>Busch Hungaria KFT. Raab ,Hungary</div>
                 <ul>
-                    <li>Operating the sandshooting machine in order to produce foundry cores according to given instructions and demand on quality.</li>
+                    <li>Set up, adjust and operate mouldmaking and coremaking sandshooting machine to make sand moulds and cores</li>
+                    <li>Operate ovens to dry moulds</li>
+                    <li>Make and repair sand moulds using patterns, moulding boxes, sand and hand tools following bench, floor or pit moulding methods</li>
+                    <li>Make cores for use inside moulds to form holes or void spaces in castings using core boxes, sand, hammer and wire or other reinforcing material</li>
+                    <li>Coat cores with protective materials and bake cores in oven</li>
                 </ul>
                 <hr>
                 <h3>Service adviser for a repair shop.</h3>
                 <div>October 2009 – October 2018 <br>Malibu AutoService PE. Kirovohrad, Ukraine</div>
                 <ul>
-                    <li>The repair cost evaluation.</li>
-                    <li>Craftsman's zone management</li>
+                    <li>The repair cost evaluation</li>
+                    <li>Establish and implement policies and procedures for staff</li>
+                    <li>Respond to inquiries or complaints and resolve problems</li>
+                    <li>Plan, organize, direct, control and evaluate the operations of an establishment providing services car repair</li>
                 </ul>
             </div>
         </div>
@@ -165,7 +178,7 @@
             let difY = y2 - y1
             let moveDir = null
             if(Math.abs(difX) > Math.abs(difY)){
-                if(difX > 20) { 
+                if(difX > 10) { 
                     console.log("swipe")
                     document.getElementById("menu-column").style.zIndex="3"
                 }
