--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <li>The repair cost evaluation</li>
                     <li>Establish and implement policies and procedures for staff</li>
                     <li>Respond to inquiries or complaints and resolve problems</li>
-                    <li>Plan, organize, direct, control and evaluate the operations of an establishment providing services car repair</li>
+                    <li>Plan, organize, direct, control and evaluate the operations of an establishment providing services of car repair</li>
                 </ul>
             </div>
         </div>
