--- a/index.html
+++ b/index.html
@@ -73,7 +73,18 @@
             <h2 >Experience</h2>
             <hr>
             <div class="features">
-                <h3>Process control and machine operator.</h3>
+                <h3>Grocery clerk part-time.</h3>
+                <div>June 2024 - ... <br>Loblaw Co Ltd , Montreal, Canada</div>
+                <ul>
+                    <li>Unpack products received by store and count or weigh items.</li>
+                    <li>Price items using stamp or stickers according to price list.</li>
+                    <li>Stock shelves and display areas and keep stock clean and in order.</li>
+                    <li>Direct customers to location of articles sought and assist with inquiries.</li>
+                    
+                </ul>
+                <hr>
+
+                <h3>Process control and machine operator full-time.</h3>
                 <div>February 2023 - November 2023 <br>Mid-Day Squares Inc. Montreal, Canada</div>
                 <ul>
                     <li>Operate multi-function process control machinery through control panels, computer terminals and other control systems to grind, mix and blend food products.</li>
@@ -84,7 +95,7 @@
                     <li>Set up and adjust food processing and packaging machines.</li>
                 </ul>
                 <hr>
-                <h3>Process control and machine operator.</h3>
+                <h3>Process control and machine operator full-time.</h3>
                 <div>January 2022 – December 2022 <br>Busch Hungaria KFT. Raab ,Hungary</div>
                 <ul>
                     <li>Set up, adjust and operate mouldmaking and coremaking sandshooting machine to make sand moulds and cores</li>
@@ -94,7 +105,7 @@
                     <li>Coat cores with protective materials and bake cores in oven</li>
                 </ul>
                 <hr>
-                <h3>Carbon fiber manufacturing plant, line operator.</h3>
+                <h3>Carbon fiber manufacturing plant, line operator full-time.</h3>
                 <div>January 2020 – January 2022 <br>Zoltek KFT. Nyergesujfalu, Hungary</div>
                 <ul>
                     <li>Set up, prepare and adjust carbon fiber production machinery to carry all the steps step in the overall carbon fiber production operation.</li>
@@ -104,7 +115,7 @@
                     <li>Assist with machinery maintenance and repair.</li>
                 </ul>
                 <hr>
-                <h3>Process control and machine operator.</h3>
+                <h3>Process control and machine operator full-time.</h3>
                 <div>November 2018 – January 2020 <br>Busch Hungaria KFT. Raab ,Hungary</div>
                 <ul>
                     <li>Set up, adjust and operate mouldmaking and coremaking sandshooting machine to make sand moulds and cores</li>
@@ -114,7 +125,7 @@
                     <li>Coat cores with protective materials and bake cores in oven</li>
                 </ul>
                 <hr>
-                <h3>Service adviser for a repair shop.</h3>
+                <h3>Service adviser for a repair shop full-time.</h3>
                 <div>October 2009 – October 2018 <br>Malibu AutoService PE. Kirovohrad, Ukraine</div>
                 <ul>
                     <li>The repair cost evaluation</li>
