--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <div class="features">
                 
                 <ul>
+                    <li>Maintain shift log of production and other data</li>
+                    <li>Perform corrective machine adjustments</li>
+                    <li>Work with multi-function process control machinery through control panels, computer terminals
+                        and other control systems</li>
                     <li>Classification of folders.</li>
                     <li>Unpack products received by store and count, weigh or sort items.</li>
                     <li>Stock shelves and display areas , keep stock in order.</li>
